--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "prepublishOnly": "npm run build",
     "docker": "docker build -f ./Dockerfile -t asset-transfer-basic .",
     "package": "npm run build && npm shrinkwrap",
-    "start:server-nontls": "set -x && fabric-chaincode-node server --chaincode-address=$CHAINCODE_SERVER_ADDRESS --chaincode-id=$CHAINCODE_ID",
-    "start:server-debug": "set -x && NODE_OPTIONS='--inspect=0.0.0.0:9229' fabric-chaincode-node server --chaincode-address=$CHAINCODE_SERVER_ADDRESS --chaincode-id=$CHAINCODE_ID",
-    "start:server": "set -x && fabric-chaincode-node server --chaincode-address=$CHAINCODE_SERVER_ADDRESS --chaincode-id=$CHAINCODE_ID --chaincode-tls-key-file=/hyperledger/privatekey.pem --chaincode-tls-client-cacert-file=/hyperledger/rootcert.pem --chaincode-tls-cert-file=/hyperledger/cert.pem"
+    "start:app": "ts-node src/app.ts"
   },
   "engineStrict": true,
   "author": "Hyperledger",
   "license": "Apache-2.0",
   "dependencies": {
+    "@grpc/grpc-js": "1.8.7",
+    "@hyperledger/fabric-gateway": "1.1.1",
     "fabric-contract-api": "^2.4.0",
     "fabric-shim": "^2.4.0",
     "json-stringify-deterministic": "^1.0.1",
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.5",
-    "@types/node": "^10.12.10",
+    "@types/node": "^18.11.19",
     "@types/sinon": "^5.0.7",
     "@types/sinon-chai": "^3.2.1",
     "chai": "^4.2.0",
