--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prepublishOnly": "npm run build",
     "docker": "docker build -f ./Dockerfile -t asset-transfer-basic .",
     "package": "npm run build && npm shrinkwrap",
-    "start:app": "ts-node src/app.ts"
+    "start:app": "nodemon src/app.ts"
   },
   "engineStrict": true,
   "author": "Hyperledger",
@@ -26,9 +26,13 @@
   "dependencies": {
     "@grpc/grpc-js": "1.8.7",
     "@hyperledger/fabric-gateway": "1.1.1",
+    "@types/express": "^4.17.17",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "fabric-contract-api": "^2.4.0",
     "fabric-shim": "^2.4.0",
     "json-stringify-deterministic": "^1.0.1",
+    "nodemon": "^2.0.20",
     "sort-keys-recursive": "^2.1.2"
   },
   "devDependencies": {
@@ -42,9 +46,9 @@
     "nyc": "^14.1.1",
     "sinon": "^7.1.1",
     "sinon-chai": "^3.3.0",
-    "ts-node": "^7.0.1",
+    "ts-node": "^10.9.1",
     "tslint": "^5.11.0",
-    "typescript": "^3.1.6"
+    "typescript": "^4.9.5"
   },
   "nyc": {
     "extension": [
