--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prepublishOnly": "npm run build",
     "docker": "docker build -f ./Dockerfile -t asset-transfer-basic .",
     "package": "npm run build && npm shrinkwrap",
-    "start:app": "nodemon src/app.ts"
+    "start:app": "nodemon src/backend/index.ts"
   },
   "engineStrict": true,
   "author": "Hyperledger",
@@ -29,8 +29,8 @@
     "@types/express": "^4.17.17",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "fabric-contract-api": "^2.4.0",
-    "fabric-shim": "^2.4.0",
+    "fabric-contract-api": "~2.5.2",
+    "fabric-shim": "~2.5.2",
     "json-stringify-deterministic": "^1.0.1",
     "nodemon": "^2.0.20",
     "sort-keys-recursive": "^2.1.2"
